# psychat-solana

./: .gitignore  Anchor.toml  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  test-minting.js
components/: Chat.tsx  ClientWalletButton.tsx  Dashboard.tsx  Marketplace.tsx
docs/: demo_script.md
lib/: anchor.ts
pages/: _app.tsx  index.tsx
pages/api/: chat.ts
programs/psychat/: Cargo.toml
programs/psychat/src/: lib.rs
public/idl/: psychat.json  psychat_minimal.json  psychat_simple.json
styles/: globals.css
utils/: sponsorIntegrations.ts
