[package]
name = "psychat"
version = "0.1.0"
description = "PsyChat - Solana-native mental health platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "psychat"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

